--- a/go/Makefile
+++ b/go/Makefile
@@ -4,7 +4,7 @@ day  := 18
 year := 20
 
 test.day: fmt
-	go test -timeout=10s -v advent/20${year}/day${day} && \
+	go test -timeout=10s -v advent/20${year}/day${day}/... && \
 	go test -timeout=100s -v -run 'TestFixture20${year}/TestDay${day}' advent/20${year}
 
 test.2020: fmt
